--- a/index.html
+++ b/index.html
@@ -322,6 +322,187 @@
       </div>
     </div>
   </div>
+
+  <div class="container page5">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height5">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Gedrag en communicatie</h1>
+          </div>
+          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+            <h4>
+              Roedels
+            </h4>
+            <p>
+              Wolven zijn zeer sociale dieren die meestal in roedels leven met daarin een alfa-mannetje en een alfa-vrouwtje. De alfa’s regelen alles in de roedel, zoals: wanneer er gejaagd wordt, wanneer het tijd is om te reizen naar een ander stuk land en wie er
+              als eerste eten krijgt. Ze lossen zelfs conflicten op tussen de wolven in de roedel. Het alfa-mannetje wordt gekozen of bepaald qua hoe sterk hij is, hoe intimiderend hij is of hoe gerespecteerd hij wordt. Het alfa-vrouwtje krijgt haar status
+              als alfa wanneer zij de hoofdpartner van het alfa-mannetje is. Met “hoofd” wordt er bedoeld dat het wel eens kan voorkomen dat het alfa-mannetje paart met meerdere vrouwtjes in de roedel. Alle andere wolven zijn ondergeschikten, oftewel
+              beta’s, en behoren tot de lagere rang in de roedel en moeten bevelen opvolgen van de alfa’s.
+            </p>
+            <img src="vendor/images/page5wolf.png" style="height:auto;width:100%;margin-bottom:50px;margin-top:25px;" />
+            <p>
+              De grootte van een roedel is erg verschillend en wordt sterk beïnvloed door de verandering in geboortecijfers, verspreiding en sterftecijfers. De beschikbaarheid en grootte van prooidieren spelen ook belangrijke factoren.
+            </p>
+            <p>
+              Een roedel wolven hebben normaal gesproken één nest met jongen per jaar tijdens de lente. Hoewel, als er een overvloed van prooi in hun leefgebied aanwezig is, kan het weleens voorkomen dat er meer dan één vrouwtje in een roedel jongen krijgt. Waarbij
+              de grootte van het nest ongeveer 4 á 6 jongen is, maar dit kan soms ook meer of minder zijn. Een aantal – of zelfs alle – jongen kunnen sterven als er niet een stabiele voorraad is van voedsel voor de snelgroeiende pups. Daarnaast kunnen
+              ziektes en andere predatoren ook een rol spelen in het sterven van de jongen.
+            </p>
+            <p>
+              Tijdens de eerste 3 weken, worden de jongen elke 4 tot 6 uur gekoesterd en warm gehouden. In het algemeen is het de moeder die bij de jongen blijft in het nest. Omdat zij haar tijd voornamelijk besteedt aan haar jongeren, brengen andere roedelleden haar
+              voedsel. Verder worden de jongen vanaf hun geboorte volgepropt met eten. Voorlopig is hun enige taak om te spelen en te eten zodat ze genoeg tijd hebben om te groeien en nieuwe dingen te ontdekken.
+            </p>
+            <p>
+              Na ongeveer een half jaar tot een jaar zullen de pups oud genoeg zijn om te leren jagen. In hun eerste jacht zullen ze meegaan met hun ouders of met de alfa’s van de roedel en toekijken hoe hun ouderen te werk gaan.
+            </p>
+            <p>
+              Vaak zullen alleen het alfa-paar paren en nakomelingen krijgen, maar hier zijn natuurlijk wel uitzonderingen voor.
+            </p>
+            <p>
+              Het alfa-mannetje kan vervolgens niet gaan paren met z’n eigen dochters. Al zou hij het proberen of graag willen, zullen zijn dochters meestal hem wegjagen om inteelt en eventuele gezondheidsproblemen bij hun nakomelingen te voorkomen. Om hun roedel verder
+              te vergroten is er dus een mannetje nodig van een andere roedel, wat dus één van de uitzonderingen is voor het feit dat meestal alleen de alfa’s onderling paren.
+            </p>
+            <p>
+              Wanneer de pups zo’n 2 á 3 jaar bereiken, is het mogelijk dat ze hun roedel verlaten en op zoek gaan naar nieuw territorium, een andere roedel of een partner om mee te paren. Dit is dan ook meteen de leeftijd wanneer ze beginnen met paren, wat ze hun
+              hele leven lang door kunnen blijven doen.
+            </p>
+            <p>
+              Uiteengaande wolven kunnen gemiddeld wel 64 tot 113 kilometer ver rondzwerven, waarbij sommige wel een afstand van plus 160 kilometer afleggen, afhankelijk van gender, beschikbare leefgebieden en aanwezigheid van andere roedels.
+            </p>
+            <p>
+              Opzoek gaan naar een partner is zeer moeilijk, want je beste kansen liggen bij een andere roedel, wat erg gevaarlijk is, zelfs levensbedreigend, wanneer je andermans territorium binnentreedt. Als een mannetje een vrouwtje zoekt, moet hij dit toch overwegen.
+            </p>
+            <p>
+              Zodra een wolf andermans territorium betreedt, is het de taak van het alfa-mannetje om de vreemdeling weg te jagen of zelfs af te maken. Vaak hebben de indringers maar twee keuzes: vecht met je leven op het spel óf probeer zo snel mogelijk weg te rennen.
+              Als de indringer weet te blijven, zal hij, om de vrouwtjes in de buurt te laten weten van zijn
+            </p>
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container page6">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height6">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Gedrag en communicatie</h1>
+          </div>
+          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+            <h4>
+              Communicatie
+            </h4>
+            <p>
+              Bij communicatie denken mensen vaak aan praten of een ander vocaal geluid, maar zoals sommigen weten, is dat slechts een klein deel van wat communicatie inhoudt.
+            </p>
+            <p>
+              De communicatie tussen roedelleden zorgt ervoor dat wolven voor elkaar kunnen zorgen, hun territorium kunnen beschermen en samen een groot prooidier kunnen neerhalen dat een individu niet voor elkaar zou kunnen krijgen.
+            </p>
+            <p>
+              Een groot deel van de communicatie tussen de wolven in een roedel is lichaamstaal. Bepaald gespecialiseerd gedrag en postuur zijn geëvolueerd om agressie tussen roedelleden te verminderen. De lichaamstaal van wolven zorgt ervoor dat de roedel makkelijker
+              in overeenkomst kunnen leven.
+            </p>
+            <p>
+              Vocale communicatie onder wolven bestaat uit huilen, piepen, grommen en blaffen.
+            </p>
+            <p>
+              Alhoewel niet alle functies van huilen bekend zijn, zijn onderzoekers er vrijwel zeker van dat wolven deze manier van communicatie gebruiken om hun roedel bij elkaar te brengen, om territorium te claimen, om indringers te waarschuwen of om andere wolven
+              te identificeren.
+            </p>
+            <p>
+              De gezichtsuitdrukkingen van wolven worden vaak gebruikt om hun emoties te tonen en zelfs om hun personaliteit weer te geven. Bijvoorbeeld, wolven die hun tanden laten zien en hun oren voorwaarts wijzen, vertonen dominant gedrag. Het gedrag van de lagere
+              rang wolven vertonen daarbij een gesloten mond, spleetogen en zullen hun oren naar achteren wijzen en dicht bij hun hoofd houden, terwijl ze hun hoofd naar beneden richten.
+            </p>
+            <p>
+              De positie van hun staart wordt ook gebruikt om te communiceren met emoties.
+            </p>
+            <p>
+              Wolven die dreigende tekens uitdrukken, houden hun staart recht omhoog, terwijl de onderdanige wolven – meestal in de lagere rang ook wel beta’s genoemd – hun staart tussen hun benen houden.
+            </p>
+            <p>
+              Zelfs geur is een belangrijke factor bij communicatie tussen wolven.
+            </p>
+            <p>
+              Urine is de meest voorkomende vorm van geur markering voor wolven, maar ze kunnen ook geuren produceren vanuit de klieren tussen hun tenen.
+            </p>
+            <p>
+              Omdat wolvenroedels zeer territoriaal zijn, gebruiken ze bepaalde geuren om de grenzen van hun territorium duidelijk aan te stippen, zodat andere roedels weten dat dit gebied van hen is. Ook wordt geur gebruikt om eigenaarschap van eten aan te geven en
+              als een soort directie of route voor de rest van de roedel om te volgen. Geur is dus een manier voor een roedel om te laten weten dat zij lang nadat ze zijn vertrokken op deze plaats zijn geweest.
+            </p>
+            <img src="vendor/images/page5wolf3.png" style="height:auto;width:100%;margin-bottom:50px;margin-top:25px;" />
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container page7">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height7">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Hoe oriënteert de wolf zich?</h1>
+          </div>
+          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container page8">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height8">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Hoe oriënteert de wolf zich?</h1>
+          </div>
+          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container page9">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height9">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Hoe oriënteert de wolf zich?</h1>
+          </div>
+          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container page10">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height8">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
+            <h1>Hoe oriënteert de wolf zich?</h1>
+          </div>
+          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
+        </div>
+      </div>
+    </div>
+  </div>
   <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-up" onclick="movePage(NaN, false);"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
   <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-down" onclick="movePage(NaN, true);"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
   <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-counter"><p class="pageNumber">1</p></button>
