--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height1">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Lorem Ipsum1</h1>
+            <h1>Een kijkje bij de wolf</h1>
           </div>
           <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
             <p>
