--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height0">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Lorem Ipsum0</h1>
+            <h1>Eerste pagina leeg scroll naar beneden</h1>
           </div>
           <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
 
