fix shadow stacking on top

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height2">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Gesciedenis en herkomst</h1>
+            <h1>Geschiedenis en herkomst</h1>
           </div>
           <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
             <h4>
