port back the welcome screen

--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
   <link rel="icon" href="vendor/images/star.png">
 </head>
 
-
 <body>
   <!-- Welcome overlay, only shows when page is loaded -->
-  <!-- <div class="overlay">
-    <div class="overlay-content">
+  <div class="overlay">
+    <div class="overlay-content" class="welcome">
       <a><img class="logo" src="vendor/images/logo.png" /></a>
-      <button class="btn btn btn-primary" onclick="continueSite();">Lees verder</button>
+      <button class="btn btn btn-primary" onclick="continuePage();">Lees verder</button>
     </div>
-  </div> -->
-
+  </div>
   <!-- Universal background. scales for all screens -->
-  <!-- <img class="background" src="vendor/images/background.jpg" /> -->
+  <img class="background" src="vendor/images/background.jpg" />
 
   <!-- Main navigationbar -->
   <nav class="navbar fixed-top navbar-dark navbar-custom" id="navbar">
