--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <title>Lupus Inc.</title>
   <link rel="icon" href="vendor/images/star.png">
+  <!-- CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="vendor/custom/css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,7 +29,7 @@
 
   <!-- Main navigationbar -->
   <nav class="navbar fixed-top navbar-dark navbar-custom" id="navbar">
-    <a class="navbar-brand" href="#">Lupus Inc.</a>
+    <a class="navbar-brand" href="javascript:reload();">Lupus Inc.</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -1173,10 +1177,6 @@
   <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-down" onclick="movePage(NaN, true);"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
   <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-counter"><p class="pageNumber">1</p></button>
 
-  <!-- CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="vendor/custom/css/custom.css" rel="stylesheet">
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js "></script>
   <script async src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
