--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height0">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Eerste pagina leeg scroll naar beneden</h1>
+            <h1>Titel</h1>
           </div>
           <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
-
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
         </div>
