Fix the images on page9

--- a/index.html
+++ b/index.html
@@ -640,23 +640,22 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height9">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Invloed op de natuur -- not final</h1>
+            <h1>Invloed op de natuur</h1>
           </div>
           <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
             <p>
               Om het allemaal nog duidelijk weer te geven kun je naar het voedselweb hieronder kijken. Dit voedselweb laat de situatie zien van Yellowstone na de wolven herintroductie.
             </p>
             <p>
-              <img src="https://lh4.googleusercontent.com/DGaBxuejClS4rmMNhYw5miJkhOrDOsdK--w8bMT5QjJt8hkcUG2S4MhMXmIc8prZV1EBf8kZ-X7OO-HwDOGYkxD7hFRFmFiYjYNeTkUieIazrHPoQ4ohKBF8rGehqtplOxVkc1I-" width="602" height="437" />
+              <img src="https://lh4.googleusercontent.com/DGaBxuejClS4rmMNhYw5miJkhOrDOsdK--w8bMT5QjJt8hkcUG2S4MhMXmIc8prZV1EBf8kZ-X7OO-HwDOGYkxD7hFRFmFiYjYNeTkUieIazrHPoQ4ohKBF8rGehqtplOxVkc1I-" style="height:auto;max-width:600px;;width:100%;margin-top:25px;" />
             </p>
-            <p>
+            <p class="italic">
               Afbeelding 13: voedselweb voorbeeld in Yellowstone [bron]
             </p>
             <p>
               Vóór de herintroductie van de wolf waren de meeste planten, die je onderaan de voedselketen ziet, opgegeten door elanden en herten. Verder waren er nog andere herbivoren zoals dikhoornschapen, bizons en gaffelbokken die ook de planten opaten. Naast deze
               herbivoren waren er ook coyotes die op kleine dieren zoals muizen en konijnen jagen. Maar omdat er geen natuurlijke vijand voor de coyotes waren, ontstond er van hen een overvloed van nakomelingen.
             </p>
-            <br/>
             <p>
               Tijdens de afwezigheid van de wolf, is dus overduidelijk te zien dat er te weinig toppredatoren waren die de overvloed aan herbivoren en andere predatoren, als de coyotes, in bedwang hielden.
             </p>
@@ -666,49 +665,44 @@
               de grizzlyberen wel op elanden en gaffelbokken, maar dat was vaak niet mogelijk en dit was niet wat ze het liefst aten. Slechts 11% van het dieet van grizzlyberen bestaat uit zoogdieren en 67% bestaat uit plantensoorten. Je kan ook zien
               in deze grafiek dat er pas na de wolven herintroductie (in 1995) er meer beren in Yellowstone begonnen te komen.
             </p>
-            <br/>
-            <br/>
-            <br/>
             <p>
-              <img src="https://lh3.googleusercontent.com/JUyH3pWEsSE4RETW8ePrZorMxyYsYJWhARJSBbAFak0tYrSEcRJqjgOyazN79uxbP89fUAj22Vbah-hmD3qrpRC9ue97_cgALw8LlB28_SK7e5pxtDIFB-b9CWUUXWGeQBuL9Ijg" width="300" height="261" />
+              <img src="https://lh3.googleusercontent.com/JUyH3pWEsSE4RETW8ePrZorMxyYsYJWhARJSBbAFak0tYrSEcRJqjgOyazN79uxbP89fUAj22Vbah-hmD3qrpRC9ue97_cgALw8LlB28_SK7e5pxtDIFB-b9CWUUXWGeQBuL9Ijg" style="height:auto;max-width:600px;;width:100%;margin-top:25px;" />
             </p>
-            <p>
+            <p class="italic">
               Afbeelding 14: grafiek, populatiedichtheid van de grizzlybeer [bron]
             </p>
-            <br/>
             <p>
               Dit zijn de gegevens vóór de wolven herintroductie.
             </p>
             <p>
               Nu gaan we stap voor stap kijken wat er gebeurde na de herintroductie.
             </p>
-            <br/>
             <p>
-              Het was dus al duidelijk toen de wolven geherintroduceerd werden dat het aantal elanden en herten daalden en dat er daardoor meer planten weer konden groeien. Ook konden de planten en bomen beter groeien.
-              <br/>
-              <br/> Een voorbeeld hiervan is cottonwood, waarvan het aantal in 1995 rond de 1 à 2 was, had in 2010 rond de 150 à 160 in aantallen.
-              <br/>
-              <br/>
-              <img src="https://lh5.googleusercontent.com/ImWOrLI90jOusOUUNy0w-WF2Lakl1xwlSPNfqFZHyhmIU38uPJ2HrW7c2hv1KCojQYOdb9bh_ZJBGhSXzFXrPabzq0-dn7yUgcHlknST2CcMUiwpHXcZ3l17Mq0Jg3NhpvmhxPyG" width="224" height="100" />
+              Het was dus al duidelijk toen de wolven geherintroduceerd werden dat het aantal elanden en herten daalden en dat er daardoor meer planten weer konden groeien. Ook konden de planten en bomen beter groeien. Een voorbeeld hiervan is cottonwood, waarvan het
+              aantal in 1995 rond de 1 à 2 was, had in 2010 rond de 150 à 160 in aantallen.
             </p>
             <p>
+              <img src="https://lh5.googleusercontent.com/ImWOrLI90jOusOUUNy0w-WF2Lakl1xwlSPNfqFZHyhmIU38uPJ2HrW7c2hv1KCojQYOdb9bh_ZJBGhSXzFXrPabzq0-dn7yUgcHlknST2CcMUiwpHXcZ3l17Mq0Jg3NhpvmhxPyG" style="height:auto;max-width:600px;;width:100%;margin-top:25px;" />
+            </p>
+            <p class="italic">
               Afbeelding 15: grafiek, aantal cottonwoodplantjes [bron]
             </p>
             <p>
-              <br/> Of een ander voorbeeld is de hoogte van espen bomen die in 1997 40 cm was en in 2010 345 cm was. Dat is een toename van meer dan 650%.
+              Of een ander voorbeeld is de hoogte van espen bomen die in 1997 40 cm was en in 2010 345 cm was. Dat is een toename van meer dan 650%.
             </p>
             <p>
-              <br/>
-              <img src="https://lh6.googleusercontent.com/yLJyy5Z6vUN1JaY5n6kALUXLhw3Y8WWD6PPqg0aJa38EyJqZHQ2BbY3fAB3bshvOiFlmkkX2-HG4yQQSTFFHAT-iXB9-2hH83ABJv6FddOnKOU-Bhf5FVmivk6R-dkjhbbzDeX_I" width="221" height="107" />
+              <img src="https://lh6.googleusercontent.com/yLJyy5Z6vUN1JaY5n6kALUXLhw3Y8WWD6PPqg0aJa38EyJqZHQ2BbY3fAB3bshvOiFlmkkX2-HG4yQQSTFFHAT-iXB9-2hH83ABJv6FddOnKOU-Bhf5FVmivk6R-dkjhbbzDeX_I" style="height:auto;max-width:600px;;width:100%;margin-top:25px;" />
             </p>
-            <p>
+            <p class="italic">
               Afbeelding 16: grafiek, hoogte van espenbomen [bron]
             </p>
             <p>
-              <br/> Dit heeft natuurlijk ook veel invloed op de dieren, die daar leefden en die erbij komen. Om dit goed te overzien moeten we weer het voedselweb van Yellowstone erbij pakken.
-              <img src="https://lh6.googleusercontent.com/n_vX3_dduPe5NRTKao-_UOe1RY9gqD-_uacc5oU8gTMp-NNtBdHbkjyhcdCuhsS2QSDxWW1KqwGbOAOeKDxDiRIfBPeZsA53oul03BEBC5VuqFMuq5tZ_iMB6FFAhrec1YsqJuk4" width="602" height="437" />
+              Dit heeft natuurlijk ook veel invloed op de dieren, die daar leefden en die erbij komen. Om dit goed te overzien moeten we weer het voedselweb van Yellowstone erbij pakken.
             </p>
             <p>
+              <img src="https://lh6.googleusercontent.com/n_vX3_dduPe5NRTKao-_UOe1RY9gqD-_uacc5oU8gTMp-NNtBdHbkjyhcdCuhsS2QSDxWW1KqwGbOAOeKDxDiRIfBPeZsA53oul03BEBC5VuqFMuq5tZ_iMB6FFAhrec1YsqJuk4" style="height:auto;max-width:600px;;width:100%;margin-top:25px;" />
+            </p>
+            <p class="italic">
               Afbeelding 17: voedselweb voorbeeld in Yellowstone [bron]
             </p>
             <p>
@@ -717,28 +711,27 @@
               veel van hun nakomelingen. De coyotes hadden nu een natuurlijke vijand, waardoor de populatie coyotes is gedaald. In het tabel hieronder zie je de gevolgen.
             </p>
             <p>
-              <br/>
-              <img src="https://lh6.googleusercontent.com/_lItWGaLx2tGlvZ6H7FFogtQwFGn5XAnYqT2xV7wQjXnsREvhcN4otMu6lzGddfQX9lWHWjj69iVhJ-pHC7hYvt1bYKzcQ6Q2axVV27JxQEWQ3Oeci6eiZPQm_-U859z8xEm9UYE" width="602" height="369" />
+              <img src="https://lh6.googleusercontent.com/_lItWGaLx2tGlvZ6H7FFogtQwFGn5XAnYqT2xV7wQjXnsREvhcN4otMu6lzGddfQX9lWHWjj69iVhJ-pHC7hYvt1bYKzcQ6Q2axVV27JxQEWQ3Oeci6eiZPQm_-U859z8xEm9UYE" style="height:auto;max-width:600px;;width:100%;margin-top:25px;" />
+            </p>
+            <p class="italic">
+              Afbeelding 18: grafiek, aantal wolven en coyotes in Yellowstone [bron]
             </p>
             <p>
-              Afbeelding 18: grafiek, aantal wolven en coyotes in Yellowstone [bron]
-              <br/>
-              <br/> Sinds 1995 zie je dat het gemiddelde aantal coyotes afneemt t/m 2002 en dan weer toeneemt, maar niet zo hoog als daarvoor. Je kan wel zien dat er in 2007 een hoge piek was, waar het aantal coyotes bijna de 60 raakte (net zoals 13 jaar
-              geleden), maar het jaar daarop is het weer gedaald naar 41.
-              <br/> Dit had als gevolg dat de rode vos ook vaker te zien was omdat er minder coyotes waren die bepaalde gebieden als territorium geclaimd hadden. Maar er kwamen ook veel meer kleine dieren zoals konijnen en hertmuizen, wat weer als gevolg
-              had dat er meer roodstaartbuizerds, kale adelaars en vele andere vogels en kleine zoogdieren tevoorschijn kwamen.
-              <br/>
-              <br/> En doordat alles meer bloeide en vruchtbaarder werd, kwamen er meer bomen en bossen. Rivieren gingen rechter stromen door de sterkere grond en dit zorgde ervoor dat er ook steeds meer bevers kwamen. Omdat er genoeg voedsel was en genoeg
-              materiaal om dammen en burchten te maken, groeiden de beverpopulatie van 1 kolonie tot 12 kolonies.
+              Sinds 1995 zie je dat het gemiddelde aantal coyotes afneemt t/m 2002 en dan weer toeneemt, maar niet zo hoog als daarvoor. Je kan wel zien dat er in 2007 een hoge piek was, waar het aantal coyotes bijna de 60 raakte (net zoals 13 jaar geleden), maar het
+              jaar daarop is het weer gedaald naar 41. Dit had als gevolg dat de rode vos ook vaker te zien was omdat er minder coyotes waren die bepaalde gebieden als territorium geclaimd hadden. Maar er kwamen ook veel meer kleine dieren zoals konijnen
+              en hertmuizen, wat weer als gevolg had dat er meer roodstaartbuizerds, kale adelaars en vele andere vogels en kleine zoogdieren tevoorschijn kwamen.
+            </p>
+            <p>
+              En doordat alles meer bloeide en vruchtbaarder werd, kwamen er meer bomen en bossen. Rivieren gingen rechter stromen door de sterkere grond en dit zorgde ervoor dat er ook steeds meer bevers kwamen. Omdat er genoeg voedsel was en genoeg materiaal om dammen
+              en burchten te maken, groeiden de beverpopulatie van 1 kolonie tot 12 kolonies.
             </p>
             <p>
               Je kan de groei in het diagram beneden zien.
             </p>
-            <br/>
             <p>
-              <img src="https://lh3.googleusercontent.com/bg3emsRPObYC39IfB5mpx0mfOV_OL7rPz9dFYHGGrxcb_eMOkpLZkAMk5-feBbN2uIjaZ-6dGanv3yN8Fl40Ub27iv8JeK5CpYw8Dhykbx60iGWwo88FpQDFNQdl-EI_b01ZZSJf" width="372" height="173" />
+              <img src="https://lh3.googleusercontent.com/bg3emsRPObYC39IfB5mpx0mfOV_OL7rPz9dFYHGGrxcb_eMOkpLZkAMk5-feBbN2uIjaZ-6dGanv3yN8Fl40Ub27iv8JeK5CpYw8Dhykbx60iGWwo88FpQDFNQdl-EI_b01ZZSJf" style="height:auto;max-width:600px;;width:100%;margin-top:25px;" />
             </p>
-            <p>
+            <p class="italic">
               Afbeelding 19: grafiek, aantal kolonies van de bever in Yellowstone [bron]
             </p>
             <br/>
@@ -1035,7 +1028,7 @@
               land wordt aangepast door middel van meer bosvorming en het ontstaan van nieuwe rivieren. Het ontstaan van rivieren brengt weer allerlei andere dieren en planten die zich kunnen vestigen in het gebied, waardoor alweer de biodiversiteit zal
               toenemen.
             </p>
-            <p class="italic">
+            <p style="font-style: italic;">
               “Hoe zitten wolven in elkaar: wat is hun gedrag; gewoontes; bouw; habitat; etc.?”
             </p>
             <p>
@@ -1049,7 +1042,7 @@
               De wolf heeft een tactische manier van jagen die geoptimaliseerd is voor een groep wolven die samen jagen op hun prooi, waarbij hun geslepen zintuigen de jacht nog makkelijker maken. Daarbij hebben ze een territorium die wordt gemarkeerd door middel van
               defecatie en urine zodat wolven buiten de roedel weten van wie dit territorium is en ze niet te dichtbij mogen komen.
             </p>
-            <p class="italic">
+            <p style="font-style: italic;">
               “Wat is de invloed die wolven uitoefenen op andere organismen?”
             </p>
             <p>
@@ -1059,7 +1052,7 @@
               door andere herbivoren populaties in bedwang te houden. Door het claimen van territorium, zorgen de wolven ook voor een verandering in het gedrag van bepaalde dieren, zoals de grote herbivoren waar de wolf op jaagt. Deze dieren durven niet
               te dichtbij de wolf in de buurt te komen, waardoor ze bepaalde gebieden zullen vermijden en daar de vegetatie zal kunnen toenemen.
             </p>
-            <p class="italic">
+            <p style="font-style: italic;">
               “Wat is de invloed op de geografie van het gebied?”
             </p>
             <p>
@@ -1067,7 +1060,7 @@
               zijn de rivierbanken. Door de versterking van de rivierbanken zal het meanderen afnemen, waardoor vaste rivieren ontstaan en er geen modderige boel overblijft. Door het ontstaan van rivieren zal er weer een domino-effect plaatsvinden waardoor
               er meer organismen zich zullen bevinden in het gebied, zoals eenden, bevers, amfibieën, reptielen en waterplanten.
             </p>
-            <p class="italic">
+            <p style="font-style: italic;">
               “Waarom de wolf en niet een andere predator? En welke factoren spelen hier een rol bij?”
             </p>
             <p>
@@ -1076,7 +1069,7 @@
               een groter doel. Voorbeelden van andere organismen die onder een vergelijkbaar systeem leven zijn de leeuw en de mens. Net als de mens, is ook de wolf zo goed aangepast aan de natuur, dat hij vrijwel overal kan leven. Dit zorgt ervoor dat
               wolven in principe overal kunnen ingebracht worden om de conditie van de natuur te verbeteren.
             </p>
-            <p class="italic">
+            <p style="font-style: italic;font-size:16px;">
               “Zodra je de wolf inbrengt in een nieuw gebied, hoe zal de wolf naast de mens kunnen leven zonder enige conflicten?”
             </p>
             <p>
