--- a/index.html
+++ b/index.html
@@ -804,9 +804,34 @@
               De wortels van de bomen zorgt voor het afnemen van meanderen, waaruit stevige, permanente stukken grond ontstaan.
             </p>
             <p>
+              Naast een meer stevige bodem werd de bodem ook steeds meer vruchtbaar. Om te beginnen, wat maakt een bodem meer vruchtbaar? Een bodem wordt vruchtbaar genoemd wanneer de grond rijk is aan voedingsstoffen voor planten. Denk dan voornamelijk aan verschillende
+              mineralen die planten nodig hebben voor eiwitsynthese en organische stoffen die de plant kan gebruiken als brand/voedingsstoffen. Naast deze stoffen zorgen verschillende micro-organismen voor een beter leefbare grond. Deze dingen samen in
+              de grond kan je ook humus noemen. Het probleem was eerst dat door de eerst humusarme bovenlaag regenwater niet goed bleef liggen en al snel naar de diepere grondlagen stroomde. Het regenwater neemt dan ook de weinige mineralen en organische
+              stoffen die wel op het oppervlak lagen mee naar die diepere lagen waar het vervolgens niet benut kan worden. Dit proces wordt uitspoeling genoemd. Wanneer de mineralen en de organische stoffen verdwijnen, kunnen de micro-organismen zichzelf
+              ook niet voortzetten.
+            </p>
+            <p>
+              Doordat verschillende planten steeds minder gegeten werden door grote herbivoren ontstond er vanzelf een zooi meer humus. Kleine planten die afsterven die vormen een humus van verschillende organische stoffen waar vervolgens meer en grotere planten gebruik
+              van kunnen maken. De hoeveelheid mineralen nam ook toe door het toenemen van planten. Planten scheiden als afvalstoffen verschillende soorten zuren uit. Deze zuren zorgen ervoor dat uit de grond waar de planten op gevestigd zijn mineralen
+              vrijkomen. Naast dit chemische proces komen voornamelijk mineralen vrij door verschillende bacteriën en schimmels die organische stoffen omzetten in voedingszouten, dus mineralen. Deze bacteriën en schimmels nou je de reducenten. Nu dat
+              de mineralen en organische stoffen weer zich in de bodem bevinden, kunnen de micro-organismen zich ook weer vestigen.
+            </p>
+            <p>
+              Nu dat de humuslaag alsmaar groter wordt, blijft er steeds meer water liggen, er vindt dus nu geen uitspoeling meer plaats. Dit gebeurde voorheen vooral bij zandbodems vanwege de grote lucht ruimtes tussen de zandkorrels. Daarbovenop komt dat planten
+              nu ook in een meer vochtige bodem kunnen groeien. Dit is altijd voordelig, sinds elke plant water nodig heeft om goed te kunnen groeien. Juist op andere stukken grond waar de grond van zichzelf veel fijner is, waar normaal wel veel water
+              blijft staan, werd door behulp van meer humus steeds meer doordringbaar voor verschillende planten. Hier moet je denken aan een kleiachtige bodem. Een kleiachtige bodem heeft heel kleine lucht ruimtes tussen de kleikorrels, waardoor het
+              klei van nature veel water vasthoudt, maar helaas niet zo goed doordringbaar is voor planten.
+            </p>
+            <p>
+              Andere gevolgen van een humusarme grond is dat er een proces genaamt erosie plaatsvindt. Erosie zorgt voor het langzaam slijten van een ondergrond door een aantal abiotische factoren, zoals regen en wind. Erosie kan dus voorkomen worden wanneer de ondergrond
+              begroeid is met planten, zodat de grond niet makkelijk meer loslaat. Planten kunnen zich alleen goed vestigen wanneer de grond een beetje vruchtbaar is, dus humusrijk. Dit gebeurde in yellowstone, waardoor je meer stevige stukken land kreeg
+              wat vervolgens bij kon dragen aan het toenemen van permanenten rivier en maar ook bossen.
+            </p>
+            <p>
               Door de toename van bossen ontstonden er ook meerdere diersoorten die er weer voor zorgden dat de plantendiversiteit toe kon nemen. Dit zorgt ook uiteindelijk voor een veel vruchtbaardere grond. Naast het verminderen van het meanderen zijn er ook veel
-              meren en sloten ontstaan. Als reactie is de beverpopulatie gestegen. De bevers maken dammen, waardoor er meer leefomgevingen ontstaan voor andere dieren zoals vissen, eenden en reptielen. Klein in aantallen maar groot in daden is de wolf
-              één van de beste dieren om een dor, onbegroeid landschap nieuw leven te geven.
+              meren en sloten ontstaan. Als reactie is de beverpopulatie gestegen. De bevers maken dammen, waardoor er meer leefomgevingen ontstaan voor andere dieren zoals vissen, eenden en reptielen. Deze dieren konden alleen hier leven, doordat er
+              steeds meer nieuwe microklimaten ontstonden. Er is sprake van een microklimaat wanneer op kleine schaal het ecosysteem anders is dan je bij het klimaat zou verwachten. Denk bij de microklimaten aan de gloednieuwe bossen, rivieren, sloten
+              en meren. Klein in aantallen maar groot in daden is de wolf één van de beste dieren om een dor, onbegroeid landschap nieuw leven te geven.
             </p>
             <p>
               <img src="vendor/images/page10scape2.png" style="height:auto;width:100%;margin-top:25px;" />
