--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
             <p>
               <img src="vendor/images/page10graph.png" style="height:auto;width:70%;margin-top:25px;" />
             </p>
-            <p>
+            <p class="italic">
               Afbeelding 20: grafiek, aantal wapitiherten [bron]
             </p>
             <p>
@@ -785,7 +785,7 @@
             <p>
               <img src="vendor/images/page10scape.png" style="height:auto;width:100%;margin-top:25px;" />
             </p>
-            <p>
+            <p class="italic">
               Afbeelding 21: bloeiend landschap met vaste rivieren en veel biodiversiteit
             </p>
             <p>
