--- a/index.html
+++ b/index.html
@@ -77,21 +77,6 @@
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
           <a class="nav-link" href="javascript:movePage(13, NaN);">Tab13</a>
         </li>
-        <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(14, NaN);">Tab14</a>
-        </li>
-        <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(15, NaN);">Tab15</a>
-        </li>
-        <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(16, NaN);">Tab16</a>
-        </li>
-        <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(17, NaN);">Tab17</a>
-        </li>
-        <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(18, NaN);">Tab18</a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -102,10 +87,18 @@
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height0">
         <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>Titel</h1>
-          </div>
-          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content" style="top:0px;">
+            <img class="logo" src="vendor/images/logo.png" />
+            <p>
+              Ons profielwerkstuk gaat over de wolf. Maar niet alleen wat de wolf is, maar ook wat hij doet, hoe hij het doet en wat de gevolgen zijn op de natuur om ons heen. De wolf is namelijk niet zo simpel als de meesten mensen denken. Het is een erg complex dier
+              en er spelen veel achterliggende factoren bij het zijn van een wolf. Daarbij zorgt hij voor grote gevolgen in ecosystemen waar de wolf aanwezig is, maar wat beïnvloed de wolf nou allemaal precies door simpelweg z’n dagelijks leven te lijden?
+              Deze hoofdvraag splitsen we op in de geografische en ecologische veranderingen. Om dit te kunnen beantwoorden gaan we eerst na hoe de wolf nou in elkaar zit en hoe hij de dag doorbrengt als apex predator in zijn roedel zonder dat iemand
+              hem na kan doen.
+            </p>
+            <p>
+              We gebruiken hier het Yellowstone National Park als ons test arena, waar op deze dag de wolf nog steeds veel wordt onderzocht, hier kunnen we goed zien wat voor effect de wolf nou precies heeft op het park, de planten, de mens en de vele andere soorten
+              die daar leven in het geval dat hij opnieuw geherintroduceerd wordt.
+            </p>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
         </div>
