--- a/index.html
+++ b/index.html
@@ -1190,6 +1190,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js "></script>
   <script async src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/imagesloaded/imagesloaded.min.js"></script>
   <script async src="vendor/custom/js/custom.js "></script>
   <script async src="https://use.fontawesome.com/8d6338574f.js"></script>
 </body>
