--- a/index.html
+++ b/index.html
@@ -39,43 +39,43 @@
           <a class="nav-link" href="javascript:movePage(0, NaN);">Home</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(1, NaN);">Tab1</a>
+          <a class="nav-link" href="javascript:movePage(1, NaN);">Een kijkje bij de wolf</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(2, NaN);">Tab2</a>
+          <a class="nav-link" href="javascript:movePage(2, NaN);">Geschiedenis en herkomst</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(3, NaN);">Tab3</a>
+          <a class="nav-link" href="javascript:movePage(3, NaN);">Bouw van de wolf</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(4, NaN);">Tab4</a>
+          <a class="nav-link" href="javascript:movePage(4, NaN);">Hoe oriënteert de wolf zich?</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(5, NaN);">Tab5</a>
+          <a class="nav-link" href="javascript:movePage(5, NaN);">Gedrag en communicatie 1</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(6, NaN);">Tab6</a>
+          <a class="nav-link" href="javascript:movePage(6, NaN);">Gedrag en communicatie 2</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(7, NaN);">Tab7</a>
+          <a class="nav-link" href="javascript:movePage(7, NaN);">Territorium en dieet</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(8, NaN);">Tab8</a>
+          <a class="nav-link" href="javascript:movePage(8, NaN);">Invloed op de natuur 1</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(9, NaN);">Tab9</a>
+          <a class="nav-link" href="javascript:movePage(9, NaN);">Invloed op de natuur 2</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(10, NaN);">Tab10</a>
+          <a class="nav-link" href="javascript:movePage(10, NaN);">Wat is de invloed op de geografie?</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(11, NaN);">Tab11</a>
+          <a class="nav-link" href="javascript:movePage(11, NaN);">Waarom de wolf?</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(12, NaN);">Tab12</a>
+          <a class="nav-link" href="javascript:movePage(12, NaN);">Hoe kan de wolf naast de mens leven?</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(13, NaN);">Tab13</a>
+          <a class="nav-link" href="javascript:movePage(13, NaN);">Conclusie</a>
         </li>
       </ul>
     </div>
